# ExtIO_sddc

./: .gitignore  AGENTS.md  CMakeLists.txt  Interface.h  README.md
.github/workflows/: cmake.yml
Core/: CMakeLists.txt  RadioHandler.cpp  RadioHandler.h  config.h  conv_r2iq.cpp  conv_r2iq.h  fft_mt_r2iq.cpp  fft_mt_r2iq.h  fft_mt_r2iq_avx512.cpp  fft_mt_r2iq_impl.hpp
Core/arch/linux/: FX3handler.cpp  FX3handler.h  streaming.c  usb_device.c
Core/arch/win32/: FX3handler.cpp  FX3handler.h
Core/dsp/: ringbuffer.h
Core/pffft/: sse2neon.h
Core/radio/: BBRF103Radio.cpp  RX888R2Radio.cpp  RX888Radio.cpp
SDDC_FX3/: SDDC_FX3.h  StartStopApplication.c  USBhandler.c  elf2img  makefile
SDK/fw_build/fx3_fw/: fx3_armgcc_config.mak
SoapySDDC/: CMakeLists.txt  Settings.cpp  SoapySDDC.hpp
libsddc/: CMakeLists.txt  libsddc.cpp  libsddc.h  libsddc.pc.in  sddc_stream_test.c  sddc_vhf_stream_test.c  wavewrite.c
libsddc/cmake/: sddcConfig.cmake
unittest/: CMakeLists.txt  core_test.cpp  unittests.cpp
